# GameOfLife

./: CMakeLists.txt  board.txt  config.h  config.h.in  main.cpp
lib/: game_of_life.h  math3d.h
